feat: create doc and fix order xendit
